@@ -1,3 +1,5 @@
+- Refactor: Remove references of AdministrativeOffice in AcademicTariff
+
 8.4.6 (23-09-2022)
 - Refactor: Declare AcademicTreasuryEvent::getEventTargetCurrentState to retrieve to current state of the process associated with treasury event
 
